@@ -2,6 +2,6 @@
 ; Joomla! Project
 ; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8
+; Note : All ini files need to be saved as UTF-8 NO BOM
 
-MOD_MENU_SYSTEM_INFORMATION="Informations système (override)"
+
